# ACOcalculator

./: .gitignore  README.md  TODO.md  acocalculator.spec  config.ini  main.py  main_backup.py  pyproject.toml  verify_installation.py
docs/: BINARY_USAGE.md  BUILD.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  CSV_ON_EXCEL.md  QUICK_START.md  README.md  RESUMEN_CAMBIOS.md  RESUMEN_TESTING.md  RESUMEN_UV.md  TESTING.md  UV_GUIDE.md  UV_INTEGRATION.md  WINDOWS_TERMINAL.md
scripts/: README.md  build-linux.sh  build-macos.sh  build-windows.bat  create-release.sh  run.sh  setup.sh  test-binary.sh  test-coverage.sh  test-integration.sh  test-unit.sh  test.sh  verify.sh
src/: __init__.py
src/generators/: __init__.py  report_generator.py
src/managers/: __init__.py  parcial_manager.py  tp_manager.py
src/utils/: __init__.py  config_loader.py  csv_helpers.py  file_consolidator.py
tests/: __init__.py  conftest.py
tests/factories/: __init__.py  csv_factory.py  student_factory.py
tests/integration/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_config_loader.py  test_config_loader_default.py  test_csv_helpers.py  test_empty_files.py  test_tp_manager.py
